--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "bignumber.js": "^9.0.0",
     "truffle-assertions": "^0.9.2",
     "truffle-events": "0.0.7"
+  },
+  "devDependencies": {
+    "@openzeppelin/contracts": "^3.1.0"
   }
 }
