Changed reference to WFAPI to use project rather than nuget package

--- a/WFTest/WFTest.csproj
+++ b/WFTest/WFTest.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WFAPI" Version="1.0.0" />
+    <ProjectReference Include="..\WFAPI\WFAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
